# trello_move

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  trello.service  trello.timer  trello_main.py  trello_service.py
