[build-system]
  build-backend = 'pdm.backend'
  requires = ['pdm-backend']

[project]
  dependencies = [
    'py-trello<1.0.0,>=0.17.1',
    'python-dotenv<1.0.0,>=0.17.1'
  ]
  description = ''
  name = 'trello_move'
  requires-python = '<4.0,>=3.9'
  version = '0.1.0'

  [[project.authors]]
    email = 'thelarisa81@gmail.com'
    name = 'Larisa Shigareva'
